Possible fix to #218: text overflow in "All pockets" screen.
This also addresses the appearance of a horisontal scrollbar in the left
menu (pocket list).

Does not address issue 215.

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -3806,6 +3806,7 @@ meta.foundation-mq-topbar {
   top: 0;
   bottom: 0;
   position: absolute;
+  overflow-x: hidden;
   overflow-y: auto;
   background: #333;
   z-index: 1001;
@@ -5149,7 +5150,8 @@ textarea.script {
 
 .pocket-square {
   min-height: 120px;
-  margin-bottom: -0.3rem; }
+  margin-bottom: -0.3rem;
+  overflow-x: hidden; }
 
 .contact-mosaic .panel:hover, div.notifications .panel:hover, .pocket-square:hover {
   background: rgba(30, 190, 90, 0.9);
